  they offer a parameter to configure the accept setting instead. Clipboard and
  zeit.find annotate their draggables with the content types (#9390).

- Introduce ValidateCheckinEvent (#9406).

- Introduce ICheckinCheckoutEvent.publishing (for #8996).

- Changed zeit.cms.browser.form.apply_default_values to not overwrite an
  objects's existing data attributes.


1.53.0 (unreleased)
-------------------
- Added metadata checkbox show commentthread (zeit-mantis 3664)

- Limit the amount of PubliationDependencies that are actually published;
  configurable as product config of zeit.workflow: ``dependency-publish-limit``
  (#10242).

- Use gocept.testing.

- For an article, include ressort and sub-ressort in the breadcrumbs instead
  of the repository path. (#10151)

- Restructured test layer and test cases so as to have a more reliable
  tear-down. (#10456)

- Added helpers for selenium tests: eval JS and wait for conditions in the
  current window. Also use gocept.zcapatch to register temporary views etc.


1.52.0 (2011-12-08)
-------------------

- Add handler that updates XMLReferences for MultiResources on checkin
  (for #10042).


1.51.0 (2011-12-01)
-------------------

- Provide another Remotetask-Service, "low-priority", that handles publish
  tasks serially (#10024).


1.50.2 (2011-11-24)
-------------------

- Make link an IXMLContent. It is expected from content to implement
  ICMSContent (which is implied in IXMLContent). (#10017)


1.50.1 (2011-11-13)
-------------------

- Fix brown bag release 1.50.0


1.50.0 (2011-11-13)
-------------------

- Backported test helpers and fixes from the editor-ng branch to the main
  development line.


1.49.1 (2011-06-21)
-------------------

- Fix product source so it works in the face of SecurityProxies (#9231).

- Introduce ICheckinCheckoutEvent.publishing (for #8996).


1.49.0 (2011-06-20)
-------------------

- Add SourceFactory helper for sources with a small set of fixed values (for
  #8953).
